A few cleanups, dead code removal, etc.

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -23514,6 +23514,153 @@
       "bloomSize": 1310798,
       "indexHash": "QmQyqChUHWQZmiDh6FpQkeoR6u1mUD3gpUoXLPpk2JMWfH",
       "indexSize": 29368236
+    },
+    {
+      "range": "016355631-016358906",
+      "bloomHash": "QmdpnN5drm4bRGu66amKWgUqHbteAkyf9UyndTxk8DLsJn",
+      "bloomSize": 1048646,
+      "indexHash": "QmZYorXUyHpVE357rQnh8vaJ6VKafwzwav2qqT9kjUuxBz",
+      "indexSize": 26022264
+    },
+    {
+      "range": "016358907-016362404",
+      "bloomHash": "QmbR7jEbmedAbQSnTmEN327pYF9vSo9n6aoeNYR1gHWwWz",
+      "bloomSize": 1441874,
+      "indexHash": "QmbvUv54vc4VtuF2uJPVvURbjdwn25Awk2dfR9cvyGojPV",
+      "indexSize": 30808908
+    },
+    {
+      "range": "016362405-016365157",
+      "bloomHash": "QmU8Wss23UtL24YVUcZfhUJr1usGgb1Wa7jzFKd8Af6FHt",
+      "bloomSize": 1179722,
+      "indexHash": "QmW5JdmFGnFY4wY6mD3QgU5NVkzbeVSR8gegij5zvwKMrW",
+      "indexSize": 28065096
+    },
+    {
+      "range": "016365158-016368171",
+      "bloomHash": "QmbjxsnsrtZhGi9jbAqe2XddgrhoWCggjuZjWMi7P7VNfH",
+      "bloomSize": 1179722,
+      "indexHash": "QmPUNiAxNQuBiAj9q95GrAxVfVMAjh93Jw78HhWpJFigLW",
+      "indexSize": 27429088
+    },
+    {
+      "range": "016368172-016371172",
+      "bloomHash": "QmPijqEbKsJi6uzHTx4vkJgEYEBzMAUGVyQv6PbipLqqTn",
+      "bloomSize": 1048646,
+      "indexHash": "Qmb27wG16VcyENhcYwBkS9cLb37vYxFEwRHqWd2muNeRMv",
+      "indexSize": 26608284
+    },
+    {
+      "range": "016371173-016374176",
+      "bloomHash": "QmUvANNrKc9gYwkTtPKvpgTqzSeDkEqh2ddtRw55qLLV2D",
+      "bloomSize": 1048646,
+      "indexHash": "QmP4dozHtQg2HL4A8Zuf6MipQtULxbYd9NrsVCPbV9Sj4f",
+      "indexSize": 25934584
+    },
+    {
+      "range": "016374177-016377332",
+      "bloomHash": "QmVMc2We8p1MxxJUxgDiaQdABxSkW7Qu45YiDDT7ubUjYJ",
+      "bloomSize": 1179722,
+      "indexHash": "QmZXtLMfe61ePtLS5MmWASaYZeNPTYRRw1aW4NvT855kWy",
+      "indexSize": 27741532
+    },
+    {
+      "range": "016377333-016380305",
+      "bloomHash": "QmPnAnD2YtzzTRNuRDdZbvsAncrPEXggG6goC2ZmFwKwLs",
+      "bloomSize": 917570,
+      "indexHash": "Qmd9vjBoxkZiMZWxQPohGKscherJMXAwsRoZMSqYMMmMNU",
+      "indexSize": 24983292
+    },
+    {
+      "range": "016380306-016383473",
+      "bloomHash": "QmZAvVkrewtfDXayLwMHibnnAPPGCN5Modc6UYnSjdWdRx",
+      "bloomSize": 1179722,
+      "indexHash": "QmNRLia6b9zqneB9FS9WznPGECP1tNvm9Vfs8i5Buq1dWe",
+      "indexSize": 27424360
+    },
+    {
+      "range": "016383474-016386415",
+      "bloomHash": "Qmcpxb6d4qHQYnL8NBv54ivo1UR93xtKFNBc6N6pF55pCx",
+      "bloomSize": 917570,
+      "indexHash": "Qmatnj6qPpSjH53vKTd6zVF2tpnR5qnPtJ98kdfrqMRHNZ",
+      "indexSize": 25244452
+    },
+    {
+      "range": "016386416-016389426",
+      "bloomHash": "QmX5VDiANRHWuA6A9t8iiFhnVttQV1jMv18N6uFD1rdAn9",
+      "bloomSize": 1048646,
+      "indexHash": "QmR4F8ARq1Q8vGRxMofHrEYjeCoHLHwyc9yG47wvGgxeuP",
+      "indexSize": 26384736
+    },
+    {
+      "range": "016389427-016392451",
+      "bloomHash": "Qmf6yz91KQHEqv7PmPnuawKPy8oRRJoRiTFGMU2zB4GGeT",
+      "bloomSize": 1048646,
+      "indexHash": "QmX1TfL27skcej76VP8UUgcuyAhhQqQrK5YG45SC9xeirg",
+      "indexSize": 26755420
+    },
+    {
+      "range": "016392452-016395458",
+      "bloomHash": "QmYcBQUFbyWU7HVPStUkiNjP3yoYC4J5FimsDX34zHyfHR",
+      "bloomSize": 917570,
+      "indexHash": "Qmd78e8m9L2DqxLNNypPJyZYApGcmoqUsXybQtHKtRcMjQ",
+      "indexSize": 25383192
+    },
+    {
+      "range": "016395459-016398609",
+      "bloomHash": "Qmaxd1SrooEPQqvuXmEi2vCdL8MK8EYsKWy23mXZYLH4y1",
+      "bloomSize": 1048646,
+      "indexHash": "QmaabJRzoTyGapua5ayh9ivSnfpxXrDkjQbxTADmMuRf4m",
+      "indexSize": 26820228
+    },
+    {
+      "range": "016398610-016400000",
+      "bloomHash": "QmZ6EkvXqjHxZ31Wj3fYKDhLf9F6mXaBdGf57EdniFxaGH",
+      "bloomSize": 524342,
+      "indexHash": "QmYsWwLqVQukv31QmyY71bSKFWp1WCJPUKK8dSE1LCedUw",
+      "indexSize": 12463888
+    },
+    {
+      "range": "016400001-016402877",
+      "bloomHash": "QmQfuxkBqK1zaUxRSooZW93peDUCuZznRXdkpXb4GvXDv2",
+      "bloomSize": 917570,
+      "indexHash": "QmTuAhJJF3YdcKVJs2d5vFFTP1nD2EVjHXhfDXRcbwDePt",
+      "indexSize": 25063848
+    },
+    {
+      "range": "016402878-016405822",
+      "bloomHash": "QmQq1eDH7pj24KFwZvqTnUP7rSTmmicNdW7PfX16RcvN2S",
+      "bloomSize": 1048646,
+      "indexHash": "QmQQpZnku3arzZqd4r6fn2pnuqrSLubMwzHtzmT7z9kcLu",
+      "indexSize": 26819756
+    },
+    {
+      "range": "016405823-016408910",
+      "bloomHash": "Qmcmc81f5xCBxH8CYFJwmWt94QckqsUNVaphMwbm8LdEYm",
+      "bloomSize": 917570,
+      "indexHash": "Qmb8SfBfbrejhjdVHquJvoxQbxZmDEC9P4fLL2mvjsQk1t",
+      "indexSize": 25701636
+    },
+    {
+      "range": "016408911-016412428",
+      "bloomHash": "QmQTrthDA86yePXUeUM9vgWKoQy4xKH28sN2ubBMhQouBW",
+      "bloomSize": 1179722,
+      "indexHash": "QmRVAQzUoW96sWmbo3X9NGJeqJfC4GFF4UgPuR2zqw6c3k",
+      "indexSize": 28011996
+    },
+    {
+      "range": "016412429-016415335",
+      "bloomHash": "QmWXpD8RqxXTp4EUu12oh5KcPBFjDGVt85ApzuNqNVTjV5",
+      "bloomSize": 917570,
+      "indexHash": "QmcJKAmKSH5BYU6MweHH4atm2Kdf8kbJzL2wsmdthKjtAN",
+      "indexSize": 25713952
+    },
+    {
+      "range": "016415336-016418415",
+      "bloomHash": "QmNrKLeg5FSrmm8BH2kvdz2QcBqcXzXVRmrEAJDG36wDAR",
+      "bloomSize": 1048646,
+      "indexHash": "QmdBkeZ2Ph9FAz1jiVNSnqkk6gVGQXKN5RZZbvREWLpmd9",
+      "indexSize": 26398660
     }
   ]
 }
