Updates sepolia manifest

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -473,6 +473,13 @@
       "indexSize": 2092868
     },
     {
+      "range": "002337624-002353375",
+      "bloomHash": "QmcE7uG7H6w8a19L3txMUhY383jKYZK7Sm9moEevqskiEs",
+      "bloomSize": 131114,
+      "indexHash": "QmTcnvHgrQrfzfbAaT7WUUuCDt6evx3wf6PRS7QHgVWpGw",
+      "indexSize": 1911804
+    },
+    {
       "range": "002353376-002372869",
       "bloomHash": "QmXi9QtuCgMxuwu8P1bS2c5MqST83FdPV94iVN8VUxjNm6",
       "bloomSize": 131114,
@@ -702,6 +709,90 @@
       "bloomSize": 131114,
       "indexHash": "QmczFHLkiQaBBSP8BiqYJ647jrAu3d7DwvxZzpfbdZRMLA",
       "indexSize": 1914900
+    },
+    {
+      "range": "002732073-002755481",
+      "bloomHash": "QmTLivDogyXFjmUfYgNJafThfWXUchgX48KNRzdgEkc919",
+      "bloomSize": 131114,
+      "indexHash": "QmNxzdfLdu9YX3k6nnurXKRoiL1V5G7ybSPKo8A85oJGeA",
+      "indexSize": 1798224
+    },
+    {
+      "range": "002755482-002777706",
+      "bloomHash": "QmZhH89AihTUCg8NuCro3h18Tts9WyV6JQ3vzLGkkgg4Qd",
+      "bloomSize": 131114,
+      "indexHash": "QmdGpXHbPX5QpCLYoE21PMgVutFJCCAzZzH2GtnFuvHFHL",
+      "indexSize": 1969168
+    },
+    {
+      "range": "002777707-002798981",
+      "bloomHash": "QmdoXVhDQXr8emU1ah1Up56mEG9GRPocAr5yK1BC4gQGfw",
+      "bloomSize": 131114,
+      "indexHash": "QmbuxLBJGjs8WFaNWw6tnSWEBzZD5dRT7bd6q6hf2v1iHA",
+      "indexSize": 1913512
+    },
+    {
+      "range": "002798982-002800000",
+      "bloomHash": "QmadALTJqLNTjigmhkTmb1dzRMvaxkPS92LsKJPQVgxHqX",
+      "bloomSize": 131114,
+      "indexHash": "QmUr2n55nKuoUG83b1r7LgXWPn5eZTTRvpHWWck6vkZJBn",
+      "indexSize": 73832
+    },
+    {
+      "range": "002800001-002818599",
+      "bloomHash": "QmS5zVgcQ7ZsfbHsYwAu39TrAN6s41FhZLwJFToQypDfvU",
+      "bloomSize": 131114,
+      "indexHash": "QmQqJJf1Y8m9YWmcSJCDxQFAV9ezrPYV9qgxayZvyjjFQi",
+      "indexSize": 1919144
+    },
+    {
+      "range": "002818600-002837578",
+      "bloomHash": "QmdudhKk1hcGqEGLHYAGFeQHb16cL6KXUVc93TFwTEchct",
+      "bloomSize": 131114,
+      "indexHash": "QmbWFwHLWFgXRHrsr2WK2Zit7dvTvLeJqGsR4eUsBM3RF3",
+      "indexSize": 1998996
+    },
+    {
+      "range": "002837579-002852913",
+      "bloomHash": "QmRzsqJbXEMHZryyL948KT8ncfW52jUyGZy91iXDcRYgSN",
+      "bloomSize": 131114,
+      "indexHash": "Qmdk9KJFNfkQNxxFH2UgMtxiC6p4x6WSWLCcZ9sZEBJcZs",
+      "indexSize": 2098468
+    },
+    {
+      "range": "002852914-002854604",
+      "bloomHash": "QmZhby4exqPYJMp2HAPh8hWfkFWCQZRQkvhejLrpdTZKwp",
+      "bloomSize": 131114,
+      "indexHash": "QmNxFewVpFDzLaTq845ubu2p5QWvk3ZzpuB8X973DVvS41",
+      "indexSize": 2421336
+    },
+    {
+      "range": "002854605-002860485",
+      "bloomHash": "QmXUMw6kRLmirz3UfYU3A8hTfCJ4KzkLmYHvrfswPcNyY8",
+      "bloomSize": 131114,
+      "indexHash": "QmRJEQrHcHqrqA3orVmWPCHhuTKj7xocndHaGbaXDrfVoA",
+      "indexSize": 2388420
+    },
+    {
+      "range": "002860486-002876280",
+      "bloomHash": "Qmf7B38c1qtibf5T4xzPADbS35wD97TkpkWk1UCUrP276o",
+      "bloomSize": 131114,
+      "indexHash": "QmaCsfPoJEsojUA22Rede8fUop1cpQkgXSj4c4TqEyMcfz",
+      "indexSize": 2048136
+    },
+    {
+      "range": "002876281-002898389",
+      "bloomHash": "QmaSwFTMYutVrGut3aFv5whAvtckV2z77ojsmfMwh777wx",
+      "bloomSize": 131114,
+      "indexHash": "QmNmJy87Mk4oi7qSSvD8w6B4ktBbyxz85ytYDWjSrbo8o4",
+      "indexSize": 1851036
+    },
+    {
+      "range": "002898390-002900000",
+      "bloomHash": "QmPYN4raswKt9R6zBENveuJk8H7MVHCaocHgyZ8LDafaRi",
+      "bloomSize": 131114,
+      "indexHash": "QmVrWGadPSywm83hsruc6AFmh6tuvFXzfM1oZfHMfXDrWF",
+      "indexSize": 177072
     }
   ]
 }
