--- a/test/gold/apps/cacheStatus/alteredTests/grabABI.toml
+++ b/test/gold/apps/cacheStatus/alteredTests/grabABI.toml
@@ -1,2 +1,2 @@
 [display]
-format = "[{address}]\t[{encoding}]\t[{type}]\t[{constant}]\t[{name}]\t[{signature}]\t[{input_names}]"
+format = "[{address}]\t[{encoding}]\t[{type}]\t[{constant}]\t[{name}]\t[{signature}]"
