--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -23976,6 +23976,146 @@
       "bloomSize": 1048646,
       "indexHash": "QmfUBeA571ktr2TA1NsDZCuLsjPmrqvrWaSvM8QNhjK3hK",
       "indexSize": 26238224
+    },
+    {
+      "range": "016556055-016558974",
+      "bloomHash": "Qmaxy7Z5XwNJtm1zGJoRxarQ5XUct3UuYQSwNyLJm2BTPv",
+      "bloomSize": 917570,
+      "indexHash": "QmVJ2TQ9ETuzbZgVgrWbk93mCDQnkD97fGQ5XuTqaDMJ92",
+      "indexSize": 24691664
+    },
+    {
+      "range": "016558975-016562100",
+      "bloomHash": "Qmc3eEWRY8kzJGWaWWhWpV8ujr5tmkBgTYbDGtyzmvkDBE",
+      "bloomSize": 1179722,
+      "indexHash": "QmdmcS3jZYekm75HrGrxJR7JcpXYEaWxPpYWtDqTm2EWXo",
+      "indexSize": 27382732
+    },
+    {
+      "range": "016562101-016564914",
+      "bloomHash": "Qmb2MDpoAhhVoX9gzUtq89ioJFX71oYSoFyBKVZ5XCX4ro",
+      "bloomSize": 917570,
+      "indexHash": "QmZ6Jn81nKoo4jmg5ZqDiNvnpY6JkRfAbSzFvK8CZdJXWg",
+      "indexSize": 25260908
+    },
+    {
+      "range": "016564915-016567993",
+      "bloomHash": "QmRL2WDphQRKqCixJUTDAsxqkhw5Wz5pZ9vw7Mcz54gA98",
+      "bloomSize": 917570,
+      "indexHash": "QmTfNcBbiGjav19rRCAS3QHzCG9Loinqk5DGTbjF1FJznY",
+      "indexSize": 25321720
+    },
+    {
+      "range": "016567994-016570851",
+      "bloomHash": "QmStHcUj2grwuE1bVGuRJP7rSVRzA6wxn225BDFBPDT9Rr",
+      "bloomSize": 1048646,
+      "indexHash": "Qmckyq6hxwzWMEW6R73Y2NtApAKTS2SgpKzew3R1ZHnwQi",
+      "indexSize": 26668980
+    },
+    {
+      "range": "016570852-016573657",
+      "bloomHash": "QmQzqPB6Wja6J1QB8M7N7dVAzAAuixQnBi7bWEdpv35uYh",
+      "bloomSize": 917570,
+      "indexHash": "QmcQcNGQem76rygXzAiSUxHu8LdCzDLTDaA1ZxrJJ8h2Bo",
+      "indexSize": 24555572
+    },
+    {
+      "range": "016573658-016576379",
+      "bloomHash": "QmZ8kimduBQDSXoW5GZL8bqtv5rHbEkNJj8FXi5JWWcZu7",
+      "bloomSize": 917570,
+      "indexHash": "QmYiHZBobEd5iv6wf1pDCws5Nj69g6cnZb8iWT9BFQdiG4",
+      "indexSize": 25753852
+    },
+    {
+      "range": "016576380-016579093",
+      "bloomHash": "QmPAXknCCmKFRnivazAMBpUuKUhdXsdbgCPYWGkR2RiYVL",
+      "bloomSize": 917570,
+      "indexHash": "QmTJoPvndaQXoD9utoLtvtTjRHkwNgfkx5EvvHNj8vEyJj",
+      "indexSize": 25290124
+    },
+    {
+      "range": "016579094-016581894",
+      "bloomHash": "QmVuWcRwrYSCnY4Hd6NG4H36bDyM2wULtSWKVPNp8dDq4d",
+      "bloomSize": 917570,
+      "indexHash": "QmPdJPSu6cwa3JfPggG9F7J9ypwa3DYG2oXhsaiTJBeKrL",
+      "indexSize": 24799908
+    },
+    {
+      "range": "016581895-016584673",
+      "bloomHash": "QmWcpykveTFuQW9e49XAa5VjxKaxqT2b1j4aSMMn7Uomeg",
+      "bloomSize": 1048646,
+      "indexHash": "QmQW8tgvJdsSJ77ivnFphKCuZeA3gbzGgDweQe6ZP8ub4P",
+      "indexSize": 26574932
+    },
+    {
+      "range": "016584674-016587472",
+      "bloomHash": "QmStA74ieWLka5XD7LhJLqQ2jFi7iByGqwgJrQr9WVCvkG",
+      "bloomSize": 917570,
+      "indexHash": "QmRzUwU8Dx82d67GLfSkHfbPizzeSuLMXa44gVu7iW7EL8",
+      "indexSize": 24860264
+    },
+    {
+      "range": "016587473-016590393",
+      "bloomHash": "Qmb6TeCdpDVFkECgvt9rUXryZpqHybRTAHdSNCvWSWzcyu",
+      "bloomSize": 1048646,
+      "indexHash": "QmSzsadCRy195RkC23jTXtUgEKM2V5bCcoKtwgUnt7BtJX",
+      "indexSize": 26057160
+    },
+    {
+      "range": "016590394-016593182",
+      "bloomHash": "QmcW5bFCPDGa7yMan8mCuwgr19SZm92j4qaRTo1atk2AHw",
+      "bloomSize": 917570,
+      "indexHash": "QmYebiiYd1AwDWNheATwWq2Jq5bd8Di3FvgLgTLMNvaSuS",
+      "indexSize": 25639164
+    },
+    {
+      "range": "016593183-016595979",
+      "bloomHash": "QmRULGVP2EPHifrRXRjXrcJmF8AVHjc7v5Ffo5ML8Ygfif",
+      "bloomSize": 917570,
+      "indexHash": "QmUjDESSEAKMabcreMAw47G7qYEyGhHgWQ3UzvGjtpjndk",
+      "indexSize": 24855692
+    },
+    {
+      "range": "016595980-016598782",
+      "bloomHash": "Qmf8KEZ7qDSDBr5bLfyrqEXSC5AjeZ6qvv4fWjky2pca1B",
+      "bloomSize": 1048646,
+      "indexHash": "QmciG5KYCohbmLnAWkvLUmQutMaB8qQFPgkzJsmTrqWDHP",
+      "indexSize": 26730060
+    },
+    {
+      "range": "016598783-016600000",
+      "bloomHash": "QmXvdBS7WGYP7XMDtSdLjhuC5yvSneKW6VDhdLLvM1WAH3",
+      "bloomSize": 524342,
+      "indexHash": "QmR3iyfiPL6r6FduhvyHMCm1CXaqua17enrMwLZQmoBBRL",
+      "indexSize": 11975528
+    },
+    {
+      "range": "016600001-016602866",
+      "bloomHash": "QmX5qYs5GixeLQ6jyEpLg3TfqUBPXhqfUxGNXo5wixVAmS",
+      "bloomSize": 917570,
+      "indexHash": "QmVVrHXgj7n9VQgxxQSPHAuiHQKVxpw6teKZvSiodNU1L2",
+      "indexSize": 25362688
+    },
+    {
+      "range": "016602867-016606081",
+      "bloomHash": "QmYxwH2kV2YZqPwPpwJRsWynFoiJnukfGLYhasM5FAKbRy",
+      "bloomSize": 1179722,
+      "indexHash": "QmdHopiDz66jJu9EiADwozmMoSibzR9ZLzStAgsAk58rUP",
+      "indexSize": 27464236
+    },
+    {
+      "range": "016606082-016609083",
+      "bloomHash": "QmPehAm4MFbRxtqJAVedk7YU99ziLs9EQMzhLwBu6NiB7s",
+      "bloomSize": 917570,
+      "indexHash": "QmViBq1511Q46ghfqCnKVbAyp3Dd2bkN4XMNnNL7o8KFnH",
+      "indexSize": 24974768
+    },
+    {
+      "range": "016609084-016612474",
+      "bloomHash": "QmeAw825ujYYu8tXaMji2PRhhRezMNVtzboNMPCrAQxNAz",
+      "bloomSize": 1048646,
+      "indexHash": "QmNnZwmvBiKxmv3PK1EoGVWxWbTLqCtz3gfWhv5toHCzpc",
+      "indexSize": 26575656
     }
   ]
 }
