--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -24116,6 +24116,349 @@
       "bloomSize": 1048646,
       "indexHash": "QmNnZwmvBiKxmv3PK1EoGVWxWbTLqCtz3gfWhv5toHCzpc",
       "indexSize": 26575656
+    },
+    {
+      "range": "016612475-016615309",
+      "bloomHash": "QmSCNVPgj9MxLSgMXTPyhZAQjcr954uhvvwmCVdUemF1Z2",
+      "bloomSize": 917570,
+      "indexHash": "QmWDyJsrBAu7ErWfd5S6RTjxwf5zwMwujmriLJpTyZPjbi",
+      "indexSize": 25200616
+    },
+    {
+      "range": "016612475-016618210",
+      "bloomHash": "QmYehY5zzmDhDukwVH8tqybaundnTfY7jGWiQQndy51uBM",
+      "bloomSize": 917570,
+      "indexHash": "QmQt3SaSRvp9oen1AY7CiVjbVg1RaysSmCod9kCGKN5Tyt",
+      "indexSize": 25450960
+    },
+    {
+      "range": "016615310-016618436",
+      "bloomHash": "QmXPMUM5EZwEnBF9JZfZAvHhpbqUe7NkQfXRXjFbRGLEUr",
+      "bloomSize": 1048646,
+      "indexHash": "QmQ1QcyrSXtbaLnuhV13QRRYJmhWv2Shprqk9MNtMBfLc7",
+      "indexSize": 25837688
+    },
+    {
+      "range": "016618211-016621018",
+      "bloomHash": "QmY3mdnxCWNEKDBf3aEkmBxUXj6fyNBneVAdcAq5cPTXJB",
+      "bloomSize": 1048646,
+      "indexHash": "QmYD6y9xednAEPEwfjbiSSYtuMihyrekrvdXKsYpsPdBn3",
+      "indexSize": 26119308
+    },
+    {
+      "range": "016618437-016621183",
+      "bloomHash": "QmXHNFUzfxcBYYeUCKqC3qduAP1vpWBoH1QV5TCuiLqFxj",
+      "bloomSize": 1048646,
+      "indexHash": "QmfXUYVeJQrtDJuZZvAn2d98E5HrDaw7dyHgz21LaSTGfd",
+      "indexSize": 25944920
+    },
+    {
+      "range": "016621019-016623970",
+      "bloomHash": "QmTMAq51vjSLS8TDGGSLvBJbfFDJLhP9S1TbtPdNmJVsk4",
+      "bloomSize": 1048646,
+      "indexHash": "Qma2WGdJ7M9ULSFifxdbKEuTFJGLMNUpizgvt9LvAGQeN8",
+      "indexSize": 25892760
+    },
+    {
+      "range": "016621184-016624177",
+      "bloomHash": "QmZLxwFbxTuYqN2418mRWtaTmBcip8am1tT8Pw3RD5qZmF",
+      "bloomSize": 1048646,
+      "indexHash": "QmU8H1Xxb5zFgCwwTFYmPNoJqwnKBysQ3F6Gop71h2WEMc",
+      "indexSize": 25958400
+    },
+    {
+      "range": "016623971-016627048",
+      "bloomHash": "QmTxC1pcxPanBoc47v5NF21NWYT5tLmX98AukmbdsEUqsh",
+      "bloomSize": 1179722,
+      "indexHash": "QmcEXfspZLSLU18ebwLBndcAfJQDDMt2SEqSSh3NJiEJUV",
+      "indexSize": 27211300
+    },
+    {
+      "range": "016624178-016627237",
+      "bloomHash": "QmU5F9YS6gk5AXDJMMEb9hTNfyRr563QDZv8gtAuzbJVv8",
+      "bloomSize": 1179722,
+      "indexHash": "QmQqzQ8SxDN6U8yLbwYFYgkmvHKdw5ioQvhMJWgygJCJGe",
+      "indexSize": 27308348
+    },
+    {
+      "range": "016627049-016629735",
+      "bloomHash": "QmZXYEeoz1iruGRocyk68bEaNhZgCg2WswWxjunvVqpSqP",
+      "bloomSize": 917570,
+      "indexHash": "QmZektU8jFXN8EJyU5KtKkAAqBsihoKu2wyQe4rwm1AKUx",
+      "indexSize": 25089876
+    },
+    {
+      "range": "016627238-016629899",
+      "bloomHash": "QmfKcTpR1g1JexwnhA9v99e3wmyZCreeZjEsNJxzwQjzWb",
+      "bloomSize": 917570,
+      "indexHash": "Qmb6vx8ui4PJrSPAbQUnt1NHKBoNqfD81ddKrVgHk9NcHV",
+      "indexSize": 24939920
+    },
+    {
+      "range": "016629736-016632546",
+      "bloomHash": "QmQUXUTAmfBdj4mvU4JagYMoN6xPuhwwDdMbwGge8HorK3",
+      "bloomSize": 917570,
+      "indexHash": "QmRzPYuT2XvYoWcX7WfwoyHWZxWFU8xV8ZANLjmaR8gQoV",
+      "indexSize": 24877568
+    },
+    {
+      "range": "016629900-016632729",
+      "bloomHash": "QmXsc2qrgXexwKM7j9KenTYvAS2dZqq8FDU8B3DpGSMQT9",
+      "bloomSize": 917570,
+      "indexHash": "QmQZeDViPL2CrzK6PLRqDn5TvKZnrveQ5XHfnZRazVFGBc",
+      "indexSize": 24886136
+    },
+    {
+      "range": "016632547-016635269",
+      "bloomHash": "QmPoQ4CfHCa2GxhLtg9ffsfcsDbAjQdGg3Hk2wcJxdGaXG",
+      "bloomSize": 917570,
+      "indexHash": "QmNatv9VzRiU5ajD68YmnG7793fsVTeiY7C7Lf4f8cUFBi",
+      "indexSize": 25588060
+    },
+    {
+      "range": "016632730-016635445",
+      "bloomHash": "QmWMDPgvdLa3PKnPf4pVCTycEFf6Tj3Qk8bC8fTWy8iXYQ",
+      "bloomSize": 917570,
+      "indexHash": "QmfB4RbCSHJCxN9oYsSvLAexWZZB2pYvN4xM3m5SyNJRWn",
+      "indexSize": 25578292
+    },
+    {
+      "range": "016635270-016638028",
+      "bloomHash": "QmRcnK6fFqd4RjCQJduRi1es8LD6hMcMFeRJm7ipbvi8np",
+      "bloomSize": 917570,
+      "indexHash": "QmU4sGxSyhqnrtpf24jtMxJ3Vz5UjVaK76pVuH8kqtK4SQ",
+      "indexSize": 25337692
+    },
+    {
+      "range": "016635446-016638211",
+      "bloomHash": "QmYFU5XgtpXSJcRW1yRv2QKV1rV1jgaSUjf71PLMEXEJmc",
+      "bloomSize": 917570,
+      "indexHash": "QmPZJ7YybWyfQzjrMhnLy37YNMDjqSE16ns81FhGAXwELa",
+      "indexSize": 25403020
+    },
+    {
+      "range": "016638029-016640879",
+      "bloomHash": "QmQUnDkLh3tgqyqyDF5erNPP855MPD4C1u6emK4W1xE7qR",
+      "bloomSize": 1048646,
+      "indexHash": "QmWqsUGgXW5mvpRZFaCsA1xL98HJWF1eWWW1AQxX6SqzUb",
+      "indexSize": 25980372
+    },
+    {
+      "range": "016638212-016641063",
+      "bloomHash": "QmNzhjbhyCLarQwzntCGqjmMMh5ocvLF1tqKM7YmqJxCbs",
+      "bloomSize": 1048646,
+      "indexHash": "QmSQKo4GT8x8kfjGVtfmmRR1gp93jw2PgKgV463eXskAs2",
+      "indexSize": 26051348
+    },
+    {
+      "range": "016640880-016643601",
+      "bloomHash": "QmV5E1ELcNCYS42Y1swY5xj9zdZB9w1vRCFW4jYR4XgBM8",
+      "bloomSize": 1048646,
+      "indexHash": "QmZixidyyjjvRJMWNyXJ6pb1SBjoVbb25QJovwg14QPHpm",
+      "indexSize": 25944824
+    },
+    {
+      "range": "016641064-016643759",
+      "bloomHash": "QmegkLScspz27LJJCrVkxJnqFJAZBNM1JP7e3q4hzpJWha",
+      "bloomSize": 1048646,
+      "indexHash": "QmcCcBHdnpAscWPB1PCDF2psjUkPZv71oFPrAQaF223Q3z",
+      "indexSize": 25976136
+    },
+    {
+      "range": "016643602-016646507",
+      "bloomHash": "QmPrXTynFYLeZY4GuYCYkGiL8KYLd7jS7GuVJSknPRsVvz",
+      "bloomSize": 917570,
+      "indexHash": "QmfHy7djg9cv8UZJCjbSe6RP4bL8xVdZoj3SjJ2BoTy8Ht",
+      "indexSize": 25619012
+    },
+    {
+      "range": "016643760-016646699",
+      "bloomHash": "QmNetbq6ow2AVsiUJMMoQ5DbbnGUC4eGpEgAUx8V2VDABo",
+      "bloomSize": 917570,
+      "indexHash": "QmTLJ8b3avDiUTmHHzTUMweYWMbmncGQQuTFqdPW3z3sg8",
+      "indexSize": 25538280
+    },
+    {
+      "range": "016646508-016649420",
+      "bloomHash": "Qmak1bs5kmg8urLsithnri5QkPEgApNshZ3qz7FLQCwRnm",
+      "bloomSize": 1048646,
+      "indexHash": "QmbY8WLx8z78SKk6KF6HgJ3mxemNbwgJtkfipV42ei1Ty9",
+      "indexSize": 26548500
+    },
+    {
+      "range": "016646700-016649593",
+      "bloomHash": "QmP8VeVsupidfR72t6byTVfh3ukSdoeKTxU18wssGKdwye",
+      "bloomSize": 1048646,
+      "indexHash": "QmZ6B9yxErrZo4dABK71mqBtWrEYzJ1tRWY2VSgygsR3zE",
+      "indexSize": 26445224
+    },
+    {
+      "range": "016649421-016652167",
+      "bloomHash": "Qmerqsc4KWocmpsXZTjKbDqCWBFxFBnCzURm2ksfXk1g95",
+      "bloomSize": 917570,
+      "indexHash": "QmVyWriLNWkGUrRWTBnHsW2jsXBZtWfUnEpAe9Hm7wq6fy",
+      "indexSize": 24843604
+    },
+    {
+      "range": "016649594-016652331",
+      "bloomHash": "QmcfHYc2zEaHz5i8eAqTgh4BwwuXxYKNkMNwid7UCSH2MZ",
+      "bloomSize": 917570,
+      "indexHash": "QmaF3C3f4fgkGWf2WSFoj2vCg1mLmPamZGMLiV73qATbxD",
+      "indexSize": 24757056
+    },
+    {
+      "range": "016652332-016654950",
+      "bloomHash": "QmRJf2Vt7e5qCLu2pXYm6tBdFYhnf7sHopZG7Zwwwxvump",
+      "bloomSize": 917570,
+      "indexHash": "Qma7i8RP1qjc3YJMEd9VmAk59tZsKC1rELyBkzXZa5UN8M",
+      "indexSize": 24732208
+    },
+    {
+      "range": "016654951-016657750",
+      "bloomHash": "QmZtyk3FhPmX3vQXGdGA7nAFjd1F58WKez1WxeAGWY1kMb",
+      "bloomSize": 917570,
+      "indexHash": "Qmc8w1veNx1NTNzjNf1U7h3CVe3hr78hYTmqEuN31hk9p2",
+      "indexSize": 25554136
+    },
+    {
+      "range": "016657751-016660823",
+      "bloomHash": "QmTx7xBZcoidkvpurvBzN1sNReU1zho4q5gGsSrodqNuvg",
+      "bloomSize": 917570,
+      "indexHash": "QmckL66WqCT555XtWkziHmGaJ8zuzUrizGF9bLKW28ayUo",
+      "indexSize": 25588920
+    },
+    {
+      "range": "016660824-016663860",
+      "bloomHash": "QmQvbodzWu2FZofzazNw3sPFx3cRNFkLSr31aNMroKq6sn",
+      "bloomSize": 1048646,
+      "indexHash": "QmevzgVcYU3CqiW9vdsFdax2QR3CpTeEwqkPLvzv1YaxB6",
+      "indexSize": 26302704
+    },
+    {
+      "range": "016663861-016666836",
+      "bloomHash": "QmefQAVSdYiUgRtXaZmTyywU8kczsPup6SLjSyLX8yLoSs",
+      "bloomSize": 917570,
+      "indexHash": "QmXebNiuukeMLuCrL6uBkV6SP7ovXzfzFjPpKkqRJYNz4W",
+      "indexSize": 25629640
+    },
+    {
+      "range": "016666837-016669837",
+      "bloomHash": "QmXTSvQRRpphhoD6FBwA3bq3V8ZnVVEGX4qMcKRzM3BLoC",
+      "bloomSize": 1048646,
+      "indexHash": "Qme3bLcsxmS13Q5J6PKKQs4oznq1sNLHbmVRsxAJY8UxgH",
+      "indexSize": 26715520
+    },
+    {
+      "range": "016669838-016672655",
+      "bloomHash": "QmYACn9jA35rPXryzZk1oVK4azkzxGezjGdFgwPTmHdmgS",
+      "bloomSize": 917570,
+      "indexHash": "QmTkc8phQ5Y6YcPkCw9PhLH4X4fCvvoTyqea9qDbWSVzJi",
+      "indexSize": 25741244
+    },
+    {
+      "range": "016672656-016675632",
+      "bloomHash": "QmfBSqawNjcdhuT8JUMiTBHJfoGXdsGLdGiHBgPpvNqg3M",
+      "bloomSize": 1048646,
+      "indexHash": "QmYuRVGA3Nf9amwzCBbc2yhSiTXAYru6NMrqHUxygwzKR4",
+      "indexSize": 26189468
+    },
+    {
+      "range": "016675633-016678405",
+      "bloomHash": "QmTveYix5fukGHifnobad7HkfAaEj3GQtisGRwmvfvc4MG",
+      "bloomSize": 1048646,
+      "indexHash": "QmdLL3oWPUaypQuR5qLcHcfX3NJgPhL5Y3yRNetqZoiXKT",
+      "indexSize": 26316936
+    },
+    {
+      "range": "016678406-016681261",
+      "bloomHash": "QmXVaAG9ajfd1n2LxqWtoFjSQsCqSCKJyr8Lx6vK2G7Bz3",
+      "bloomSize": 917570,
+      "indexHash": "QmYh35HeCUPoBKuMjnkvY43tB2yaAiTBhPzfkTyQoCmNfc",
+      "indexSize": 25244420
+    },
+    {
+      "range": "016681262-016684075",
+      "bloomHash": "Qmf8Me7EiCVxmDGQfudhUFg2HsoDjKTWRExsVo64KJL165",
+      "bloomSize": 1048646,
+      "indexHash": "QmZbCFsySVPjHMCdzsBRtokcbe6WiYPkCXLBaiKyPN5Px5",
+      "indexSize": 26467308
+    },
+    {
+      "range": "016684076-016686870",
+      "bloomHash": "QmaVNARH6uHtaSDtbpkh9x34evK4HxvL9w4RnSoasMQ9v6",
+      "bloomSize": 917570,
+      "indexHash": "QmRxWVJqf7TPARQbFE1QFpkNhKLr6r9HvBHZP4anCGRatP",
+      "indexSize": 25781316
+    },
+    {
+      "range": "016686871-016689487",
+      "bloomHash": "QmX8oAFB1YvgJavuQzhSGkrQBxozaqnfq8fxLeCuNAVTWY",
+      "bloomSize": 917570,
+      "indexHash": "QmfYzsXZGqN4bQsKT8p7bu2EtyLEBETnqjJP4M8GBXdyLB",
+      "indexSize": 24513480
+    },
+    {
+      "range": "016689488-016692090",
+      "bloomHash": "QmNsSdquTi9boPtfcNmhUhqwiyFFPYuNqWp5KZp6ckYJEk",
+      "bloomSize": 917570,
+      "indexHash": "Qmf9SFZbz3hurAHyaMouvvdU9ZXjRx4LHdjbZJKM4oXBJz",
+      "indexSize": 25795468
+    },
+    {
+      "range": "016692091-016694904",
+      "bloomHash": "QmUwMpWeDBWSWaxe31eF7L8BZ7RYkKrYVgBkvrtPZFmMhA",
+      "bloomSize": 917570,
+      "indexHash": "Qmew9yPWpsggbSsDRgg1nPuKxCDxbHTic4a23JahPAB1Ax",
+      "indexSize": 25757032
+    },
+    {
+      "range": "016694905-016697846",
+      "bloomHash": "QmRcdc4qjgLpuVGZJfbCKJeXjnesfKspNLfP28VVzAYAoP",
+      "bloomSize": 1179722,
+      "indexHash": "QmZVLsHMuLyX7EQuakjo8BJVqPgM4QYByZ45CX19XXy3E4",
+      "indexSize": 27348836
+    },
+    {
+      "range": "016697847-016700000",
+      "bloomHash": "QmWLdCmC198Q1LQUNMtvGmHhh2FfNfMfYNxt83jjhPgoy5",
+      "bloomSize": 786494,
+      "indexHash": "QmQLJYxKznUaju1WsD3wPYhgpchHuQaTW9oXAU6xeDbe2Q",
+      "indexSize": 20080736
+    },
+    {
+      "range": "016700001-016703036",
+      "bloomHash": "QmNdpoV5edzruMcVE7PhzBGnXK6og8pkm5stpZKSazWnyf",
+      "bloomSize": 1048646,
+      "indexHash": "QmNX2cCEj3Bxus2zV4NhDLqr3hyrSrzcpNchguaicz9MuU",
+      "indexSize": 26595872
+    },
+    {
+      "range": "016703037-016706186",
+      "bloomHash": "QmQHLVaXnXw1v8fRHwPJWfwxPXcDFxdawyZhHaCqf2arWd",
+      "bloomSize": 1179722,
+      "indexHash": "QmPEkwfpXvtgK2dzMXD1JfQmvRWnWprPZhB2x41Re3Je7k",
+      "indexSize": 27730420
+    },
+    {
+      "range": "016706187-016709273",
+      "bloomHash": "QmcRLFeEPd1tCrb7kr1j9JvawBTd4smTrcY7y217nps56d",
+      "bloomSize": 1048646,
+      "indexHash": "QmWyc4NkMgxXr6abwSLjJotpEMHGZkPvDW3wCUivX23Zhj",
+      "indexSize": 26164804
+    },
+    {
+      "range": "016709274-016712536",
+      "bloomHash": "Qmb6UpVzgEJ6BJPG1sZBG43oUSYsYfZsQ7nJWqE8q2qdkz",
+      "bloomSize": 1179722,
+      "indexHash": "QmYZzMZPSEJNMmfv7dDfRWRdGJ9ULQVTeJYTdM9y6dBtw9",
+      "indexSize": 27795224
+    },
+    {
+      "range": "016712537-016715546",
+      "bloomHash": "QmXeCuFZ4tZD5syszwhRgYNgFH3aii7Dd5kC6dcc9Z7WKW",
+      "bloomSize": 1048646,
+      "indexHash": "QmReVXLnvZJAMBqTpnPga1tvNJrWNkKScVprGPiXQXoWqs",
+      "indexSize": 26096888
     }
   ]
 }
