Updates a few types and some ancilary files

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -23976,6 +23976,398 @@
       "bloomSize": 1048646,
       "indexHash": "QmfUBeA571ktr2TA1NsDZCuLsjPmrqvrWaSvM8QNhjK3hK",
       "indexSize": 26238224
+    },
+    {
+      "range": "016556055-016558970",
+      "bloomHash": "QmXSf5JbJcqCKSjK3Ft6396QRVkmMETDH5oDA4XnwMYgMR",
+      "bloomSize": 917570,
+      "indexHash": "QmZj9Ln4WFuYtrQ2rEfi59eYGLbFthYq83YsgVmZW5CZzW",
+      "indexSize": 24683060
+    },
+    {
+      "range": "016558971-016562096",
+      "bloomHash": "QmPwYUW867urr96u8dg1NYhJeKpPkPobQ964PSTqrnXVPD",
+      "bloomSize": 1179722,
+      "indexHash": "Qmd2exoqiMxrGTmDSSwmRgCvWBYokxE8AUubYgL6iDbdft",
+      "indexSize": 27377956
+    },
+    {
+      "range": "016562097-016564911",
+      "bloomHash": "QmXib4x3mb2V9CkrAWdzq8gKsYc2EihV4DuPadXJDMHwx3",
+      "bloomSize": 917570,
+      "indexHash": "QmQDt4Gc9bjbXd3PQHeAyKxow8adzgqLzrsvcHiQqUYadX",
+      "indexSize": 25266680
+    },
+    {
+      "range": "016564912-016567990",
+      "bloomHash": "QmaEtwijuEBwJivjk5NLUgo5JYqJ64KSYwr9Mx6b9cyEXV",
+      "bloomSize": 917570,
+      "indexHash": "QmWZbdgCqmH84te6NE5Gqmi3Tz8LEB6JncdN73RNJKZHp7",
+      "indexSize": 25325384
+    },
+    {
+      "range": "016567991-016570849",
+      "bloomHash": "QmTsn2CQc6Tr2yEd3uYtd5a1Uxu7UG1BRSGPzFUk6z78ai",
+      "bloomSize": 1048646,
+      "indexHash": "QmZrqGtFkGuFdhLSQ6sTuq8AsehEDiCA8V66emGuowzAxF",
+      "indexSize": 26671388
+    },
+    {
+      "range": "016570850-016573654",
+      "bloomHash": "Qmbdbn8W3xqqZNoCwot3VE5vqr56kHFB1ZmWwxPmRXK43o",
+      "bloomSize": 917570,
+      "indexHash": "QmVtYJ8Qg3LhEcN6Hc7oGDwXqcZZMrojT7jwKQHDyDkZk2",
+      "indexSize": 24556568
+    },
+    {
+      "range": "016573655-016576375",
+      "bloomHash": "QmcYP4s892qwS68oF2nFM5XaBpTvNngh8jGbycbKXTAvfp",
+      "bloomSize": 917570,
+      "indexHash": "QmajjuuBSu4apz68wVFqDkwgqPXDJwYLm9qqq7ov5Jzs2V",
+      "indexSize": 25740824
+    },
+    {
+      "range": "016576376-016579089",
+      "bloomHash": "QmdaDfcwVTKi5KsLS4PJsGYHh6kEs9Yj2LQRQHLKJHWPWk",
+      "bloomSize": 917570,
+      "indexHash": "QmRsxjRDFeyjxc5oj4pc1jXmGBvWbkgKD2jPX7f6xFiWgb",
+      "indexSize": 25297600
+    },
+    {
+      "range": "016579090-016581888",
+      "bloomHash": "QmTSeaZmRoAyzHUTh8FTtrxZRZoavEJFpdyYXaxfm1M1kp",
+      "bloomSize": 917570,
+      "indexHash": "QmUv2nAmFK2XStra58tE3RXmnJTNZg6nHg8SEiSpcTfqah",
+      "indexSize": 24796048
+    },
+    {
+      "range": "016581889-016584670",
+      "bloomHash": "QmWaYTinTPSfz4F53uLQYhmjkDRqsRQ5zzXozUEnrM2Z4B",
+      "bloomSize": 1048646,
+      "indexHash": "QmeoeR9rRCV8ntTXxg7Ps2TFiVAAUFMEa4AaTSZG7XcT21",
+      "indexSize": 26575796
+    },
+    {
+      "range": "016584671-016587469",
+      "bloomHash": "QmcN5s7hGNGz1AovGgtrBrycExAWTkLP9v1WffjUuBPS1a",
+      "bloomSize": 917570,
+      "indexHash": "QmXGCtMDSniSahywUFMcwkV1HLpaNnqrkyfLi5vxmApVmu",
+      "indexSize": 24864820
+    },
+    {
+      "range": "016587470-016590390",
+      "bloomHash": "QmNd51wRk7aZXNgDeuyNM4QViZnNnSUuS59za5p7E2zsUw",
+      "bloomSize": 1048646,
+      "indexHash": "QmeVNNiU6zwxmm6cCRwGNJuuiqYMmpiBcDHVffTCX9s5Rk",
+      "indexSize": 26054232
+    },
+    {
+      "range": "016590391-016593179",
+      "bloomHash": "QmPMRGJPsXwKLsnt4aUfghSrZ4woKPy1nZ49kF6nEJiRR3",
+      "bloomSize": 917570,
+      "indexHash": "QmRuXY7sQNHNJ5XfkJQSqrhoSWjNZ5pxbvLDUu7NLe6T5M",
+      "indexSize": 25640528
+    },
+    {
+      "range": "016593180-016595977",
+      "bloomHash": "QmPMMu9FWuYnJD5SsqLEiBQt8yQYPWCY9KqtPKxT6Wojn4",
+      "bloomSize": 917570,
+      "indexHash": "QmVxtsyWp5RJsmYK8JzWjKXBzsnaAgA5v5PkiJAbhKpTTF",
+      "indexSize": 24858608
+    },
+    {
+      "range": "016595978-016598780",
+      "bloomHash": "QmRH4TusqAxjTD7TUofniT1Aoxios7gdzJy9DPk1D8LnGU",
+      "bloomSize": 1048646,
+      "indexHash": "QmNMDvqGwUyv76osHNgBYH2ZiBbh1R7WTZTnEVsSCzdaLH",
+      "indexSize": 26733680
+    },
+    {
+      "range": "016598781-016600000",
+      "bloomHash": "QmR4ELqFM5omSF1NsHxFpUJgixPSz4nTGxXEqWaftN99fq",
+      "bloomSize": 524342,
+      "indexHash": "QmcjogDTgb75xmPQ8Kozp3br1thNh7mTWDbEAF7St65kJQ",
+      "indexSize": 11996588
+    },
+    {
+      "range": "016600001-016602866",
+      "bloomHash": "QmX5qYs5GixeLQ6jyEpLg3TfqUBPXhqfUxGNXo5wixVAmS",
+      "bloomSize": 917570,
+      "indexHash": "QmVVrHXgj7n9VQgxxQSPHAuiHQKVxpw6teKZvSiodNU1L2",
+      "indexSize": 25362688
+    },
+    {
+      "range": "016602867-016606081",
+      "bloomHash": "QmYxwH2kV2YZqPwPpwJRsWynFoiJnukfGLYhasM5FAKbRy",
+      "bloomSize": 1179722,
+      "indexHash": "QmdHopiDz66jJu9EiADwozmMoSibzR9ZLzStAgsAk58rUP",
+      "indexSize": 27464236
+    },
+    {
+      "range": "016606082-016609083",
+      "bloomHash": "QmPehAm4MFbRxtqJAVedk7YU99ziLs9EQMzhLwBu6NiB7s",
+      "bloomSize": 917570,
+      "indexHash": "QmViBq1511Q46ghfqCnKVbAyp3Dd2bkN4XMNnNL7o8KFnH",
+      "indexSize": 24974768
+    },
+    {
+      "range": "016609084-016612474",
+      "bloomHash": "QmeAw825ujYYu8tXaMji2PRhhRezMNVtzboNMPCrAQxNAz",
+      "bloomSize": 1048646,
+      "indexHash": "QmNnZwmvBiKxmv3PK1EoGVWxWbTLqCtz3gfWhv5toHCzpc",
+      "indexSize": 26575656
+    },
+    {
+      "range": "016612475-016615309",
+      "bloomHash": "QmSCNVPgj9MxLSgMXTPyhZAQjcr954uhvvwmCVdUemF1Z2",
+      "bloomSize": 917570,
+      "indexHash": "QmWDyJsrBAu7ErWfd5S6RTjxwf5zwMwujmriLJpTyZPjbi",
+      "indexSize": 25200616
+    },
+    {
+      "range": "016615310-016618436",
+      "bloomHash": "QmXPMUM5EZwEnBF9JZfZAvHhpbqUe7NkQfXRXjFbRGLEUr",
+      "bloomSize": 1048646,
+      "indexHash": "QmQ1QcyrSXtbaLnuhV13QRRYJmhWv2Shprqk9MNtMBfLc7",
+      "indexSize": 25837688
+    },
+    {
+      "range": "016618437-016621183",
+      "bloomHash": "QmXHNFUzfxcBYYeUCKqC3qduAP1vpWBoH1QV5TCuiLqFxj",
+      "bloomSize": 1048646,
+      "indexHash": "QmfXUYVeJQrtDJuZZvAn2d98E5HrDaw7dyHgz21LaSTGfd",
+      "indexSize": 25944920
+    },
+    {
+      "range": "016621184-016624177",
+      "bloomHash": "QmZLxwFbxTuYqN2418mRWtaTmBcip8am1tT8Pw3RD5qZmF",
+      "bloomSize": 1048646,
+      "indexHash": "QmU8H1Xxb5zFgCwwTFYmPNoJqwnKBysQ3F6Gop71h2WEMc",
+      "indexSize": 25958400
+    },
+    {
+      "range": "016624178-016627237",
+      "bloomHash": "QmU5F9YS6gk5AXDJMMEb9hTNfyRr563QDZv8gtAuzbJVv8",
+      "bloomSize": 1179722,
+      "indexHash": "QmQqzQ8SxDN6U8yLbwYFYgkmvHKdw5ioQvhMJWgygJCJGe",
+      "indexSize": 27308348
+    },
+    {
+      "range": "016627238-016629899",
+      "bloomHash": "QmfKcTpR1g1JexwnhA9v99e3wmyZCreeZjEsNJxzwQjzWb",
+      "bloomSize": 917570,
+      "indexHash": "Qmb6vx8ui4PJrSPAbQUnt1NHKBoNqfD81ddKrVgHk9NcHV",
+      "indexSize": 24939920
+    },
+    {
+      "range": "016629900-016632729",
+      "bloomHash": "QmXsc2qrgXexwKM7j9KenTYvAS2dZqq8FDU8B3DpGSMQT9",
+      "bloomSize": 917570,
+      "indexHash": "QmQZeDViPL2CrzK6PLRqDn5TvKZnrveQ5XHfnZRazVFGBc",
+      "indexSize": 24886136
+    },
+    {
+      "range": "016632730-016635445",
+      "bloomHash": "QmWMDPgvdLa3PKnPf4pVCTycEFf6Tj3Qk8bC8fTWy8iXYQ",
+      "bloomSize": 917570,
+      "indexHash": "QmfB4RbCSHJCxN9oYsSvLAexWZZB2pYvN4xM3m5SyNJRWn",
+      "indexSize": 25578292
+    },
+    {
+      "range": "016635446-016638211",
+      "bloomHash": "QmYFU5XgtpXSJcRW1yRv2QKV1rV1jgaSUjf71PLMEXEJmc",
+      "bloomSize": 917570,
+      "indexHash": "QmPZJ7YybWyfQzjrMhnLy37YNMDjqSE16ns81FhGAXwELa",
+      "indexSize": 25403020
+    },
+    {
+      "range": "016638212-016641063",
+      "bloomHash": "QmNzhjbhyCLarQwzntCGqjmMMh5ocvLF1tqKM7YmqJxCbs",
+      "bloomSize": 1048646,
+      "indexHash": "QmSQKo4GT8x8kfjGVtfmmRR1gp93jw2PgKgV463eXskAs2",
+      "indexSize": 26051348
+    },
+    {
+      "range": "016641064-016643759",
+      "bloomHash": "QmegkLScspz27LJJCrVkxJnqFJAZBNM1JP7e3q4hzpJWha",
+      "bloomSize": 1048646,
+      "indexHash": "QmcCcBHdnpAscWPB1PCDF2psjUkPZv71oFPrAQaF223Q3z",
+      "indexSize": 25976136
+    },
+    {
+      "range": "016643760-016646699",
+      "bloomHash": "QmNetbq6ow2AVsiUJMMoQ5DbbnGUC4eGpEgAUx8V2VDABo",
+      "bloomSize": 917570,
+      "indexHash": "QmTLJ8b3avDiUTmHHzTUMweYWMbmncGQQuTFqdPW3z3sg8",
+      "indexSize": 25538280
+    },
+    {
+      "range": "016646700-016649593",
+      "bloomHash": "QmP8VeVsupidfR72t6byTVfh3ukSdoeKTxU18wssGKdwye",
+      "bloomSize": 1048646,
+      "indexHash": "QmZ6B9yxErrZo4dABK71mqBtWrEYzJ1tRWY2VSgygsR3zE",
+      "indexSize": 26445224
+    },
+    {
+      "range": "016649594-016652331",
+      "bloomHash": "QmcfHYc2zEaHz5i8eAqTgh4BwwuXxYKNkMNwid7UCSH2MZ",
+      "bloomSize": 917570,
+      "indexHash": "QmaF3C3f4fgkGWf2WSFoj2vCg1mLmPamZGMLiV73qATbxD",
+      "indexSize": 24757056
+    },
+    {
+      "range": "016652332-016654950",
+      "bloomHash": "QmRJf2Vt7e5qCLu2pXYm6tBdFYhnf7sHopZG7Zwwwxvump",
+      "bloomSize": 917570,
+      "indexHash": "Qma7i8RP1qjc3YJMEd9VmAk59tZsKC1rELyBkzXZa5UN8M",
+      "indexSize": 24732208
+    },
+    {
+      "range": "016654951-016657750",
+      "bloomHash": "QmZtyk3FhPmX3vQXGdGA7nAFjd1F58WKez1WxeAGWY1kMb",
+      "bloomSize": 917570,
+      "indexHash": "Qmc8w1veNx1NTNzjNf1U7h3CVe3hr78hYTmqEuN31hk9p2",
+      "indexSize": 25554136
+    },
+    {
+      "range": "016657751-016660823",
+      "bloomHash": "QmTx7xBZcoidkvpurvBzN1sNReU1zho4q5gGsSrodqNuvg",
+      "bloomSize": 917570,
+      "indexHash": "QmckL66WqCT555XtWkziHmGaJ8zuzUrizGF9bLKW28ayUo",
+      "indexSize": 25588920
+    },
+    {
+      "range": "016660824-016663860",
+      "bloomHash": "QmQvbodzWu2FZofzazNw3sPFx3cRNFkLSr31aNMroKq6sn",
+      "bloomSize": 1048646,
+      "indexHash": "QmevzgVcYU3CqiW9vdsFdax2QR3CpTeEwqkPLvzv1YaxB6",
+      "indexSize": 26302704
+    },
+    {
+      "range": "016663861-016666836",
+      "bloomHash": "QmefQAVSdYiUgRtXaZmTyywU8kczsPup6SLjSyLX8yLoSs",
+      "bloomSize": 917570,
+      "indexHash": "QmXebNiuukeMLuCrL6uBkV6SP7ovXzfzFjPpKkqRJYNz4W",
+      "indexSize": 25629640
+    },
+    {
+      "range": "016666837-016669837",
+      "bloomHash": "QmXTSvQRRpphhoD6FBwA3bq3V8ZnVVEGX4qMcKRzM3BLoC",
+      "bloomSize": 1048646,
+      "indexHash": "Qme3bLcsxmS13Q5J6PKKQs4oznq1sNLHbmVRsxAJY8UxgH",
+      "indexSize": 26715520
+    },
+    {
+      "range": "016669838-016672655",
+      "bloomHash": "QmYACn9jA35rPXryzZk1oVK4azkzxGezjGdFgwPTmHdmgS",
+      "bloomSize": 917570,
+      "indexHash": "QmTkc8phQ5Y6YcPkCw9PhLH4X4fCvvoTyqea9qDbWSVzJi",
+      "indexSize": 25741244
+    },
+    {
+      "range": "016672656-016675632",
+      "bloomHash": "QmfBSqawNjcdhuT8JUMiTBHJfoGXdsGLdGiHBgPpvNqg3M",
+      "bloomSize": 1048646,
+      "indexHash": "QmYuRVGA3Nf9amwzCBbc2yhSiTXAYru6NMrqHUxygwzKR4",
+      "indexSize": 26189468
+    },
+    {
+      "range": "016675633-016678405",
+      "bloomHash": "QmTveYix5fukGHifnobad7HkfAaEj3GQtisGRwmvfvc4MG",
+      "bloomSize": 1048646,
+      "indexHash": "QmdLL3oWPUaypQuR5qLcHcfX3NJgPhL5Y3yRNetqZoiXKT",
+      "indexSize": 26316936
+    },
+    {
+      "range": "016678406-016681261",
+      "bloomHash": "QmXVaAG9ajfd1n2LxqWtoFjSQsCqSCKJyr8Lx6vK2G7Bz3",
+      "bloomSize": 917570,
+      "indexHash": "QmYh35HeCUPoBKuMjnkvY43tB2yaAiTBhPzfkTyQoCmNfc",
+      "indexSize": 25244420
+    },
+    {
+      "range": "016681262-016684075",
+      "bloomHash": "Qmf8Me7EiCVxmDGQfudhUFg2HsoDjKTWRExsVo64KJL165",
+      "bloomSize": 1048646,
+      "indexHash": "QmZbCFsySVPjHMCdzsBRtokcbe6WiYPkCXLBaiKyPN5Px5",
+      "indexSize": 26467308
+    },
+    {
+      "range": "016684076-016686870",
+      "bloomHash": "QmaVNARH6uHtaSDtbpkh9x34evK4HxvL9w4RnSoasMQ9v6",
+      "bloomSize": 917570,
+      "indexHash": "QmRxWVJqf7TPARQbFE1QFpkNhKLr6r9HvBHZP4anCGRatP",
+      "indexSize": 25781316
+    },
+    {
+      "range": "016686871-016689487",
+      "bloomHash": "QmX8oAFB1YvgJavuQzhSGkrQBxozaqnfq8fxLeCuNAVTWY",
+      "bloomSize": 917570,
+      "indexHash": "QmfYzsXZGqN4bQsKT8p7bu2EtyLEBETnqjJP4M8GBXdyLB",
+      "indexSize": 24513480
+    },
+    {
+      "range": "016689488-016692090",
+      "bloomHash": "QmNsSdquTi9boPtfcNmhUhqwiyFFPYuNqWp5KZp6ckYJEk",
+      "bloomSize": 917570,
+      "indexHash": "Qmf9SFZbz3hurAHyaMouvvdU9ZXjRx4LHdjbZJKM4oXBJz",
+      "indexSize": 25795468
+    },
+    {
+      "range": "016692091-016694904",
+      "bloomHash": "QmUwMpWeDBWSWaxe31eF7L8BZ7RYkKrYVgBkvrtPZFmMhA",
+      "bloomSize": 917570,
+      "indexHash": "Qmew9yPWpsggbSsDRgg1nPuKxCDxbHTic4a23JahPAB1Ax",
+      "indexSize": 25757032
+    },
+    {
+      "range": "016694905-016697846",
+      "bloomHash": "QmRcdc4qjgLpuVGZJfbCKJeXjnesfKspNLfP28VVzAYAoP",
+      "bloomSize": 1179722,
+      "indexHash": "QmZVLsHMuLyX7EQuakjo8BJVqPgM4QYByZ45CX19XXy3E4",
+      "indexSize": 27348836
+    },
+    {
+      "range": "016697847-016700000",
+      "bloomHash": "QmWLdCmC198Q1LQUNMtvGmHhh2FfNfMfYNxt83jjhPgoy5",
+      "bloomSize": 786494,
+      "indexHash": "QmQLJYxKznUaju1WsD3wPYhgpchHuQaTW9oXAU6xeDbe2Q",
+      "indexSize": 20080736
+    },
+    {
+      "range": "016700001-016703036",
+      "bloomHash": "QmNdpoV5edzruMcVE7PhzBGnXK6og8pkm5stpZKSazWnyf",
+      "bloomSize": 1048646,
+      "indexHash": "QmNX2cCEj3Bxus2zV4NhDLqr3hyrSrzcpNchguaicz9MuU",
+      "indexSize": 26595872
+    },
+    {
+      "range": "016703037-016706186",
+      "bloomHash": "QmQHLVaXnXw1v8fRHwPJWfwxPXcDFxdawyZhHaCqf2arWd",
+      "bloomSize": 1179722,
+      "indexHash": "QmPEkwfpXvtgK2dzMXD1JfQmvRWnWprPZhB2x41Re3Je7k",
+      "indexSize": 27730420
+    },
+    {
+      "range": "016706187-016709243",
+      "bloomHash": "QmX74pGU7Rjq4bsaZsXcJGXbZW3ETpiRQaHdcUngRqReAC",
+      "bloomSize": 1048646,
+      "indexHash": "QmRYFQyehiJ5V7oroDRUtuy82MbdEFUW1SeSED4QmQf6du",
+      "indexSize": 26141096
+    },
+    {
+      "range": "016709244-016712507",
+      "bloomHash": "Qmevn9GmU85rKwfrLegpgGLyMh4xPKwq7nJEGt3xCve2cu",
+      "bloomSize": 1179722,
+      "indexHash": "QmXj4sRTrwXbTLg8gDG99nJcHt1x9ZGXqCTxi54pcQzu7c",
+      "indexSize": 27819604
+    },
+    {
+      "range": "016712508-016715514",
+      "bloomHash": "QmSXeoqyJkpyPEk8svgsdwKRbqwVX9dGEdXGbU4VtH2czV",
+      "bloomSize": 1048646,
+      "indexHash": "Qmbt8Ggr8cHzkMhPNhxWyuYsvR1Au9XzTcc8AqyYv6Ux46",
+      "indexSize": 26083940
     }
   ]
 }
