Turns on additional tests

--- a/src/libs/test-libs/etherlib/CMakeLists.txt
+++ b/src/libs/test-libs/etherlib/CMakeLists.txt
@@ -11,11 +11,11 @@ project(test-etherlib)
 add_subdirectory(abiTest)
 add_subdirectory(abiTest2)
 add_subdirectory(binaryPathTest)
-# add_subdirectory(blockTest)
+add_subdirectory(blockTest)
 add_subdirectory(dataUpgradeTest)
 add_subdirectory(decodeAbiTest)
 add_subdirectory(displayStrsTest)
-# add_subdirectory(forEveryTest)
+add_subdirectory(forEveryTest)
 add_subdirectory(generalTest)
 add_subdirectory(lastBlockTest)
 add_subdirectory(printFloatTest)
