Implements --unripe for chifra list - fixes issue #2834

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -25145,6 +25145,160 @@
       "bloomSize": 1048646,
       "indexHash": "Qmazc6wk7AQYR2JXqFRK5dTQpS9WpTCiFA4afedLTySMJQ",
       "indexSize": 26777472
+    },
+    {
+      "range": "017047735-017051155",
+      "bloomHash": "QmRKS9WLpYX687iB2deWjuQWtu8WAYr1ABYPo12jhsGdK5",
+      "bloomSize": 1179722,
+      "indexHash": "QmSw4CAhiZv1a2XNCDaFQGfDoSRySgAd8AMPpfWfM28wfs",
+      "indexSize": 27771812
+    },
+    {
+      "range": "017051156-017054449",
+      "bloomHash": "QmbXEd12N2zTzUVmF7vTfYZ5eVULwFTvZnUGZbiu9S6Ho8",
+      "bloomSize": 1179722,
+      "indexHash": "QmShAP6h29LexGAh9Qs1PvHjkVNLsfoB1NV1xHnJUEfik3",
+      "indexSize": 27593808
+    },
+    {
+      "range": "017054450-017058178",
+      "bloomHash": "QmbXgCt6ApkMAewqXK3UtPLHfU8TygxwAwATZuLPxvB1tZ",
+      "bloomSize": 1310798,
+      "indexHash": "QmVo21LxjeBRm2AhoPUhXY5ob75DJDCSPaVsQXSXjAYHMs",
+      "indexSize": 29489828
+    },
+    {
+      "range": "017058179-017061828",
+      "bloomHash": "QmVwco8fnyQ6bCt3SwjzMLtmCQ9qkN6UbjrBw8rZTin6fP",
+      "bloomSize": 1179722,
+      "indexHash": "QmeUyAPYrbSHj2HquztkjHLi3ytrzqdFzt4QHUfQVXzyj8",
+      "indexSize": 27753472
+    },
+    {
+      "range": "017061829-017065218",
+      "bloomHash": "QmaN4KNt9k76nkKAd5SXE926isGFBnPL4ds4DgyVmiUuqz",
+      "bloomSize": 917570,
+      "indexHash": "QmNYYupqjLsKTkDLYHDL2frZejZ7HyBx7qfJttG4cVabNS",
+      "indexSize": 24993156
+    },
+    {
+      "range": "017065219-017068378",
+      "bloomHash": "QmWHfe72JjNCLdhdG48sYpwhszJtBBb3717GQ4LY8kTnbQ",
+      "bloomSize": 917570,
+      "indexHash": "QmeKYXgqbTpKzQGHpz5jss9UBGXmobB7Krp4G3X7EfcfmP",
+      "indexSize": 25669972
+    },
+    {
+      "range": "017068379-017071525",
+      "bloomHash": "QmXqLvDGFRYgMhJZjiSpPUYmFzWJHV3MyMDy2Ny4AyFCo6",
+      "bloomSize": 786494,
+      "indexHash": "QmTW9VJteTxzUVSrsaYVKXaL4ai7jQrGM1hDJkbmX1wMdj",
+      "indexSize": 24191076
+    },
+    {
+      "range": "017071526-017074600",
+      "bloomHash": "QmdZWcUd9DHnpJKoUfGE3v8ZfJmFjs6MymTH9GYDGLrnWG",
+      "bloomSize": 917570,
+      "indexHash": "QmPCimRWkwa2jnr8wS2ajdU7Uj41Hj5pxjrBhshL7nTz9U",
+      "indexSize": 25608052
+    },
+    {
+      "range": "017074601-017077536",
+      "bloomHash": "QmVRcBi5XPUETEFK28Nuzdd1dNwff211U3kBdr4F2UC2ge",
+      "bloomSize": 786494,
+      "indexHash": "QmVgyCz296sWtE5uANkgdjjCQdNhQujhPPSTM5RhJoTygJ",
+      "indexSize": 24033192
+    },
+    {
+      "range": "017077537-017080528",
+      "bloomHash": "QmZCp4v1bcK4q4fDfKadB3yk1uJW2sNCu9AsydqdSvqQD6",
+      "bloomSize": 917570,
+      "indexHash": "Qmde6cqsy2A9AmjQHaiHYMAB6geSdLkGnxxQSrpzXTE2Hu",
+      "indexSize": 24518372
+    },
+    {
+      "range": "017080529-017083475",
+      "bloomHash": "QmfXmAY2Ud7fFMRVjaVLNf6SXrv97SeBstLf7kYGCkEZgZ",
+      "bloomSize": 786494,
+      "indexHash": "QmZV8YBJ8Cn8HyRg5h6pyXvJPwn4bYEuiSBuUx4bj43G2k",
+      "indexSize": 24173156
+    },
+    {
+      "range": "017083476-017086356",
+      "bloomHash": "QmUoyqWmvnBu1QHrxoXFuB5pacETJiV9nePjAR5ZmF2UeB",
+      "bloomSize": 786494,
+      "indexHash": "Qmd6UQsyGgxwMmQDbmZPPAg3gwHgSVMfhGC4RxGFJhxhLN",
+      "indexSize": 24306864
+    },
+    {
+      "range": "017086357-017089353",
+      "bloomHash": "Qmee31gfjuNekiWUpq9M7E9NLRgWhtfUdiQSMEzWGQKhAA",
+      "bloomSize": 917570,
+      "indexHash": "QmP9K6hKS8NnTjLet8FT2X7vAudamUVb2kNSXb9Cwd3d3V",
+      "indexSize": 25446456
+    },
+    {
+      "range": "017089354-017092429",
+      "bloomHash": "QmTiMN1XpSZSHN6CYUNHizSnoNpiWopJb2EdyNWDMd5ahm",
+      "bloomSize": 917570,
+      "indexHash": "QmWoEZ9gBYEswq5oEgaFSRdWn4aRSQHxXjUNWyEzvin2Lm",
+      "indexSize": 24769568
+    },
+    {
+      "range": "017092430-017095605",
+      "bloomHash": "QmPrd3kiZqP4AS5zpt9Ah3pBuSBWCDZZtJmUxdF6ZQit8k",
+      "bloomSize": 1048646,
+      "indexHash": "QmTubUBzYMk4hMLVLNLYgg6e4V72ETH3s8RJ9fbvteTUmp",
+      "indexSize": 26334440
+    },
+    {
+      "range": "017095606-017098778",
+      "bloomHash": "QmRGExMRjYvx1BQWXMPqSR5SfSNyhhYH3MkniAzs1RvVWf",
+      "bloomSize": 1048646,
+      "indexHash": "QmbsoLwRrrd8yCnrHt5TvVNqtqE3LJHkZfJ7PzvBuNQAyL",
+      "indexSize": 26273148
+    },
+    {
+      "range": "017098779-017100000",
+      "bloomHash": "QmVu2jJdMVz8U9HJ7wFCU45DWNMjFTEebSQ1Y41FZqncoz",
+      "bloomSize": 524342,
+      "indexHash": "QmdFuSW3dKBhBZwHjAxf8ZWvR8hx83Ah6JJNvawvKhhZLa",
+      "indexSize": 9266564
+    },
+    {
+      "range": "017100001-017103597",
+      "bloomHash": "QmNrT1pZ2gTzReCUYrEAEgGmYWGkHpB8pVQe5SjvkEa9at",
+      "bloomSize": 1048646,
+      "indexHash": "QmcpCimqZfEoNLSWZCJGRNXqC85MWpaWVD2QgqxmiWYGwb",
+      "indexSize": 27033624
+    },
+    {
+      "range": "017103598-017106997",
+      "bloomHash": "QmZG7RjKgPy63famVVxJt7zHyKixmHu9h5J5A9LdZfznu5",
+      "bloomSize": 786494,
+      "indexHash": "QmYzcGvbjUMaHdXitAqsdunXg9b3Sad6RepD7pqcBaY1ZF",
+      "indexSize": 24140928
+    },
+    {
+      "range": "017106998-017110681",
+      "bloomHash": "Qmc7Bwgmm36NwEJmWAJTb9aFub5sWHcNFsx2HDZaVAsnZ6",
+      "bloomSize": 1048646,
+      "indexHash": "QmS1G1HZsTqRcvnqYvT5RkWPCkJ5YESK9wYKEMPHWJTxvM",
+      "indexSize": 26949428
+    },
+    {
+      "range": "017110682-017114237",
+      "bloomHash": "QmXku8GjfiWZz4avPcFRXLmpcpfDH8fXackLdAkcuxPWmg",
+      "bloomSize": 1048646,
+      "indexHash": "QmZNEtMHKwkxcznas9YNCVfsAJx1ji1Porau4xR66L5y5L",
+      "indexSize": 26179036
+    },
+    {
+      "range": "017114238-017117564",
+      "bloomHash": "QmPg9V5DtC35CGAbrSMK2SiuFjtGzc4rgR2XPUVfLwtQcf",
+      "bloomSize": 1048646,
+      "indexHash": "Qma8EzoKbV8NWeeBhtE6GKh9sfihjWxqdVv9JX61TJVf3N",
+      "indexSize": 26045268
     }
   ]
 }
