--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,12 @@ if(CURL_FOUND)
 endif(CURL_FOUND)
 
 # ----------------------------------------------------------------------------------------
+# Protoc is needed to compile protobuf files
+#
+message(STATUS "======== LOOKING FOR PROTOC ========================")
+find_package(Protobuf)
+
+# ----------------------------------------------------------------------------------------
 # Globally available C++ settings
 set(DL_LIB "-ldl")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -Werror -Wall -O2 -fPIC")
